# adventofcode2023

./: .gitignore  Cargo.toml  Readme.md  a3.exs  a4.exs  a5.rhai
a1-a4.elixir/: a1.exs
elixir/: a2.exs  a4.exs
rhai/: a6.rhai  a7.rhai
src/: main.rs
