[package]
name = "adventofcode2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
log = "0.4.20"
num = "0.4.1"
pretty_env_logger = "0.5.0"
rhai = "1.16.3"
